--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="https://drive.google.com/uc?export=view&id=1ZK1iw_qFbM4V0Rha1cesLU-qizBJXp58" alt="Cambio">
             </div>
             <h1>Jonathan A.</h1>
-            <h2>Analista de datos</h2>
+            <h2>Data Analyst</h2>
             <div class="redes">
                 
                 
