--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
             </div>
             <h1>Jonathan A.</h1>
             <h2>Data Analyst</h2>
-            <div class="redes">
-                
-                
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <div class="redes">         
+                <a href="https://www.linkedin.com/in/jonathan-aponte-data/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="#"><i class="fa-solid fa-rss"></i></a>
             </div>
         </div>
