--- a/World_Cup.html
+++ b/World_Cup.html
@@ -53,6 +53,18 @@
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
             <h2>WORLD CUP MATCHES</h2>
+            <p class="centrado"> The epic showdown between the national teams of <span>Argentina and France in the World Cup final</span> 
+                    was an event that captivated audiences around the globe. This thrilling match, played on Doha, Qatar,
+                     stood out not only for its significance in the world of football but also for the level of competition
+                      witnessed on the field. Over 90 minutes of action and extra time, both squads showcased their 
+                      skill and passion for the sport, leaving an indelible mark on football history. 
+                      <span>In this report</span>, we will delve into the key statistics of the match, including goals, 
+                      offside calls, yellow cards, the timing of goals, and the goal scorers. 
+                    <span>Additionally</span>, we will analyze Argentina's performance throughout thefinal match, 
+                      as well as the passing patterns represented in a heat map, along with successful 
+                      and unsuccessful passes by each player in this pivotal encounter. This meticulous analysis will 
+                      allow us to gain a deeper understanding of the critical moments in the match and the performance 
+                      of the players <span>who led Argentina to the World Cup final.
             <div class="proyecto">
                 <iframe title="World_Cup" width="1000" height="500" src="https://app.powerbi.com/reportEmbed?reportId=05f61b39-f6b6-4447-83f5-6688d671223b&autoAuth=true" frameborder="100" allowFullScreen="False" top="0" left="0"></iframe>
             </div>
