--- a/World_Cup.html
+++ b/World_Cup.html
@@ -66,7 +66,8 @@
                       allow us to gain a deeper understanding of the critical moments in the match and the performance 
                       of the players <span>who led Argentina to the World Cup final.
             <div class="proyecto">
-                <iframe src="https://alumnosviu-my.sharepoint.com/personal/jonathanamaury_aponte_alumnos_viu_es/_layouts/15/Doc.aspx?sourcedoc={391bf0bf-fdbc-4571-b60e-06be212bfc95}&amp;action=embedview&amp;wdAr=1.7777777777777777&amp;wdEaaCheck=1" width="1200px" height="800px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+                <iframe src="https://drive.google.com/file/d/1nfYM6TykXsRzTvBjwu9xThFHuPKwk-ox/preview" width="640" height="480"></iframe>
+
             </div>
             
         </div>
