--- a/World_Cup.html
+++ b/World_Cup.html
@@ -65,8 +65,13 @@
                       and unsuccessful passes by each player in this pivotal encounter. This meticulous analysis will 
                       allow us to gain a deeper understanding of the critical moments in the match and the performance 
                       of the players <span>who led Argentina to the World Cup final.
+
+                          Esta es la nueva version 
+
+
+                          
             <div class="proyecto">
-                <iframe src="https://drive.google.com/file/d/1nfYM6TykXsRzTvBjwu9xThFHuPKwk-ox/preview" width="640" height="480"></iframe>
+                <iframe src="https://drive.google.com/file/d/1nfYM6TykXsRzTvBjwu9xThFHuPKwk-ox/preview" width="1000" height="800"></iframe>
 
             </div>
             
