--- a/World_Cup.html
+++ b/World_Cup.html
@@ -71,7 +71,7 @@
 
                           
             <div class="proyecto">
-                <iframe src="https://drive.google.com/file/d/1nfYM6TykXsRzTvBjwu9xThFHuPKwk-ox/preview" width="1000" height="800"></iframe>
+                <iframe src="https://1drv.ms/p/s!AvtDL0LwWCm1m1y3QdXZvzYY4Lov?e=0pKMhL" width="1000" height="800"></iframe>
 
             </div>
             
