--- a/World_Cup.html
+++ b/World_Cup.html
@@ -66,14 +66,12 @@
                       allow us to gain a deeper understanding of the critical moments in the match and the performance 
                       of the players <span>who led Argentina to the World Cup final.
 
-                          Esta es la nueva version 2.0
+                          Esta es la nueva version 3.0
 
 
                           
             <div class="proyecto">
-                <iframe src="https://1drv.ms/p/s!AvtDL0LwWCm1m1y3QdXZvzYY4Lov?e=0pKMhL" width="1000" height="800"></iframe>
-                <a href="https://1drv.ms/p/s!AvtDL0LwWCm1m1y3QdXZvzYY4Lov?e=0pKMhL" target="_blank">Ver el enlace</a>
-
+                <iframe src="https://onedrive.live.com/embed?resid=AvtDL0LwWCm1m1y3QdXZvzYY4Lov&em=2&wdAr=1.7777777777777777" width="1000" height="800" frameborder="0" scrolling="no"></iframe>
             </div>
             
         </div>
