--- a/World_Cup.html
+++ b/World_Cup.html
@@ -66,12 +66,14 @@
                       allow us to gain a deeper understanding of the critical moments in the match and the performance 
                       of the players <span>who led Argentina to the World Cup final.
 
-                          Esta es la nueva version 3.0
+                          Esta es la nueva version 4.0
 
 
                           
             <div class="proyecto">
-                <iframe src="https://onedrive.live.com/embed?resid=AvtDL0LwWCm1m1y3QdXZvzYY4Lov&em=2&wdAr=1.7777777777777777" width="1000" height="800" frameborder="0" scrolling="no"></iframe>
+                <a href="https://drive.google.com/uc?export=download&id=1nfYM6TykXsRzTvBjwu9xThFHuPKwk-ox" target="_blank">Download the report</a>
+                <a href="https://github.com/Jonathan-Aponte/portfolio/blob/main/Football_data.ipynb" target="_blank">View Source Code</a>
+
             </div>
             
         </div>
