--- a/World_Cup.html
+++ b/World_Cup.html
@@ -45,23 +45,14 @@
 
         
     <!-- SECCION PORTFOLIO -->
-    <section id="portfolio" class="inicio">
+    <section id="portfolio" class="skills">
         <div class="contenido-seccion">
-            <h2>WORLD CUP MATCHES</h2>
-            <p class="centrado"> The epic showdown between the national teams of <span>Argentina and France in the World Cup final</span> 
-                    was an event that captivated audiences around the globe. This thrilling match, played on Doha, Qatar,
-                     stood out not only for its significance in the world of football but also for the level of competition
-                      witnessed on the field. Over 90 minutes of action and extra time, both squads showcased their 
-                      skill and passion for the sport, leaving an indelible mark on football history. 
-                      <span>In this report</span>, we will delve into the key statistics of the match, including goals, 
-                      offside calls, yellow cards, the timing of goals, and the goal scorers. 
-                    <span>Additionally</span>, we will analyze Argentina's performance throughout thefinal match, 
-                      as well as the passing patterns represented in a heat map, along with successful 
-                      and unsuccessful passes by each player in this pivotal encounter. This meticulous analysis will 
-                      allow us to gain a deeper understanding of the critical moments in the match and the performance 
-                      of the players <span>who led Argentina to the World Cup final.
+            <h2> Precision on the Pitch </h2>
+            <p class="centrado"> In today's world, DATA-DRIVEN DECISION-MAKING HAS BECOME AN ESSENTIAL PART OF ALL ASPECTS OF SPORTS AND BUSINESS. 
+                That's why this analysis aims to provide an in-depth view of the passes performance of the Argentine national team during the final of the 2022 FIFA World Cup,
+                where they faced the French national team.
 
-                          Esta es la nueva version 6.0
+                          Esta es la nueva version 7.0
 
 
                           
