--- a/World_Cup.html
+++ b/World_Cup.html
@@ -52,7 +52,7 @@
                 That's why this analysis aims to provide an in-depth view of the passes performance of the Argentine national team during the final of the 2022 FIFA World Cup,
                 where they faced the French national team.
 
-                          Esta es la nueva version 9.0
+                          Esta es la nueva version 10.0
 
 
          </div>
@@ -63,7 +63,7 @@
         <div class="contenido-seccion">
             <div class="galeria">
                 <div class="proyecto">
-                    <img src="img/leo.jpg" alt="">
+                    <img src="img/informe.png" alt="">
                     <div class="overlay">
                         <a href="https://drive.google.com/uc?export=download&id=1nfYM6TykXsRzTvBjwu9xThFHuPKwk-ox">
                             <h3>Download the report </h3>
@@ -75,7 +75,7 @@
 
             <div class="galeria">
                 <div class="proyecto">
-                    <img src="img/leo.jpg" alt="">
+                    <img src="img/codigo.png" alt="">
                     <div class="overlay">
                         <a href="https://github.com/Jonathan-Aponte/portfolio/blob/main/Football_data.ipynb">
                             <h3>View Source Code </h3>
@@ -95,7 +95,7 @@
                 <!-- Formulario -->
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="img/ubicacion.png" alt="">
+                    <img src="img/map.png" alt="">
                     <div class="info">
                         <ul>
                             <li>
