--- a/World_Cup.html
+++ b/World_Cup.html
@@ -51,10 +51,6 @@
             <p class="centrado"> In today's world, DATA-DRIVEN DECISION-MAKING HAS BECOME AN ESSENTIAL PART OF ALL ASPECTS OF SPORTS AND BUSINESS. 
                 That's why this analysis aims to provide an in-depth view of the passes performance of the Argentine national team during the final of the 2022 FIFA World Cup,
                 where they faced the French national team.
-
-                          Esta es la nueva version 10.0
-
-
          </div>
     </section>   
 
@@ -63,7 +59,7 @@
         <div class="contenido-seccion">
             <div class="galeria">
                 <div class="proyecto">
-                    <img src="img/informe.png" alt="">
+                    <img src="img/report.jpeg" alt="">
                     <div class="overlay">
                         <a href="https://drive.google.com/uc?export=download&id=1nfYM6TykXsRzTvBjwu9xThFHuPKwk-ox">
                             <h3>Download the report </h3>
@@ -77,7 +73,7 @@
                 <div class="proyecto">
                     <img src="img/codigo.png" alt="">
                     <div class="overlay">
-                        <a href="https://github.com/Jonathan-Aponte/portfolio/blob/main/Football_data.ipynb">
+                        <a href="https://github.com/Jonathan-Aponte/portfolio/blob/main/Football_data.ipynb" target="_blank">
                             <h3>View Source Code </h3>
                             <p>Report</p>
                         </a>
