--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <button>
-                <a href="href="https://drive.google.com/uc?export=download&id=1-qLORd_DKwbabdrwuIzzANhLyX6k8Dvi" target="_blank" download="CV_Jonathan_A.pdf">
+                <a href="href="https://drive.google.com/uc?export=download&id=1-qLORd_DKwbabdrwuIzzANhLyX6k8Dvi" target="_blank" download="CV_Jonathan_Analyst_p.pdf">
                     Download CV <i class="fa-solid fa-download"></i>
                     <span class="overlay"></span>
                 </a>
@@ -266,7 +266,7 @@
                     <h3>Work Experience</h3>
                     <div class="item der">
                         <h4>DATA ANALYST (REMOTE)</h4>
-                        <span class="casa">Company Name</span>
+                        <span class="casa">We Rise 4 Wellness, Inc</span>
                         <span class="fecha">2023 - Present</span>
                         <p>As a data analyst, my experience is reflected in creating impactful and effective reports using Power BI and Excel. My ability to analyze extensive datasets and distinguish key trends and patterns has been crucial in driving data-driven decisions. Additionally, I collaborate effectively with diverse teams, optimizing processes and generating significant cost savings. My strong technical knowledge ensures efficiency and scalability in our analyses, contributing to the ongoing success of our company.</p>
                         <div class="conectord">
