--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                 </div>
             </div>
             <button>
-                <a href="href="https://drive.google.com/uc?export=download&id=1-qLORd_DKwbabdrwuIzzANhLyX6k8Dvi" target="_blank" download="CV_Jonathan_Analyst_p.pdf">
-                    Download CV <i class="fa-solid fa-download"></i>
-                    <span class="overlay"></span>
+                <a href="https://drive.google.com/uc?export=download&id=1-qLORd_DKwbabdrwuIzzANhLyX6k8Dvi" target="_blank">Descargar el archivo</a>
+                Download CV <i class="fa-solid fa-download"></i>
+                <span class="overlay"></span>
                 </a>
             </button>
         </div>
