--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <button>
-                <a href="https://drive.google.com/uc?export=download&id=1-qLORd_DKwbabdrwuIzzANhLyX6k8Dvi" target="_blank">Descargar el archivo</a>
+                <a href="https://drive.google.com/uc?export=download&id=1-qLORd_DKwbabdrwuIzzANhLyX6k8Dvi" target="_blank">
                 Download CV <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
                 </a>
