--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <button>
-                <a href="https://drive.google.com/uc?export=download&id=1-qLORd_DKwbabdrwuIzzANhLyX6k8Dvi" target="_blank">
+                <a href="https://drive.google.com/uc?export=download&id=1-qLORd_DKwbabdrwuIzzANhLyX6k8Dvi" target="_blank"> </a>
                 Download CV <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
                 </a>
@@ -154,18 +154,18 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Statistical analysis and modeling</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>70%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
                         <span>Data visualization</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>90%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Statistical analysis and modeling</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                         <span>Communication</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>90%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                         <span>Organization skills</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>85%</span>
+                                <span>70%</span>
                             </div>
                         </div>
                     </div>
@@ -316,9 +316,9 @@
                     
                     <img src="img/leo.jpg" alt="">
                     <div class="overlay">
-                        <a href="World_Cup.html">
-                            <h3>Precision on the Pitch</h3>
-                            <p>Argentina’s Qatar World Cup Final Passing Analysis</p>
+                        <a href="World_Cup.html"></a>
+                           <a> <h3>Precision on the Pitch</h3>
+                                <p>Argentina’s Qatar World Cup Final Passing Analysis</p>
                         </a>
                     </div>
                 </div>
