--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <img src="img/leo.jpg" alt="">
                     <div class="overlay">
                         <a href="World_Cup.html"></a>
-                           <a> <h3>Precision on the Pitch</h3>
+                           <h3>Precision on the Pitch</h3>
                                 <p>Argentina’s Qatar World Cup Final Passing Analysis</p>
                         </a>
                     </div>
