--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <button>
-                <a href="https://drive.google.com/uc?export=download&id=1-qLORd_DKwbabdrwuIzzANhLyX6k8Dvi" target="_blank"> </a>
+                <a href="https://drive.google.com/uc?export=download&id=1-qLORd_DKwbabdrwuIzzANhLyX6k8Dvi" target="_blank">
                 Download CV <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
                 </a>
@@ -316,7 +316,7 @@
                     
                     <img src="img/leo.jpg" alt="">
                     <div class="overlay">
-                        <a href="World_Cup.html"></a>
+                        <a href="World_Cup.html">
                            <h3>Precision on the Pitch</h3>
                                 <p>Argentina’s Qatar World Cup Final Passing Analysis</p>
                         </a>
