--- a/index.html
+++ b/index.html
@@ -313,8 +313,7 @@
             <h2>PORTFOLIO</h2>
             <div class="galeria">
                 <div class="proyecto">
-                    
-                    <img src="img/leo.jpg" alt="">
+                   <img src="img/leo.jpg" alt="">
                     <div class="overlay">
                         <a href="World_Cup.html">
                            <h3>Precision on the Pitch</h3>
@@ -322,7 +321,17 @@
                         </a>
                     </div>
                 </div>
+                <div class="proyecto">
+                   <img src="img/Longo_logo.png" alt="">
+                    <div class="overlay">
+                        <a href="London_team.html">
+                           <h3>Team Dashboard</h3>
+                                <p>Financial Balance and Sporting Performance at London United</p>
+                        </a>
+                    </div>
+                </div>
             </div>
+            
         </div>
     </section>
 
