--- a/London_team.html
+++ b/London_team.html
@@ -47,39 +47,24 @@
     <!-- SECCION PORTFOLIO -->
     <section id="portfolio" class="skills">
         <div class="contenido-seccion">
-            <h2> Precision on the Pitch </h2>
-            <p class="centrado"> In today's world, DATA-DRIVEN DECISION-MAKING HAS BECOME AN ESSENTIAL PART OF ALL ASPECTS OF SPORTS AND BUSINESS. 
-                That's why this analysis aims to provide an in-depth view of the passes performance of the Argentine national team during the final of the 2022 FIFA World Cup,
-                where they faced the French national team.
+            <h2> London United: Financial Balance and Sporting Performance at London United </h2>
+            <p class="centrado"> London United is a professional football team based in the city of London, England. 
+                Founded in April 2010, the club has established itself as one of the leading football teams in the region. 
+                With a rich history and a passionate fan base, London United has become a symbol in the world of football. 
+                The team competes in the professional football league of England, participating in the highest category of national football.
+                Its primary goal is to compete at the highest level and aspire to win championships both domestically and internationally, 
+                with a strong commitment to excellence in the game and the development of talented players.<br> 
+                Moreover, this report will feature the presentation of dashboards covering the four vital dimensions of analysis pertinent to 
+                our organization: financial performance, user engagement, operational processes, and learning and improvement initiatives
+
+                
          </div>
     </section>   
 
  <!-- SECCION PORTFOLIO -->
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
-            <div class="galeria">
-                <div class="proyecto">
-                    <img src="img/report.jpeg" alt="">
-                    <div class="overlay">
-                        <a href="https://drive.google.com/uc?export=download&id=1nfYM6TykXsRzTvBjwu9xThFHuPKwk-ox">
-                            <h3>Download the report </h3>
-                            <p>Report</p>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="galeria">
-                <div class="proyecto">
-                    <img src="img/codigo.png" alt="">
-                    <div class="overlay">
-                        <a href="https://github.com/Jonathan-Aponte/portfolio/blob/main/Football_data.ipynb" target="_blank">
-                            <h3>View Source Code </h3>
-                            <p>Report</p>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            <iframe src="https://vrn7wevjal8dln1.eu.qlikcloud.com/single/?appid=14dc684b-f768-4538-8ca0-fcd668228b5b&sheet=bb7996fb-7852-4916-ac70-e48ccb187dda&theme=horizon&opt=ctxmenu,currsel" style="border:none;width:100%;height:100%;"></iframe>            
         </div>
     </section>
 
