--- a/index.html
+++ b/index.html
@@ -321,6 +321,8 @@
                         </a>
                     </div>
                 </div>
+            </div>
+            <div class="galeria">    
                 <div class="proyecto">
                    <img src="img/Longo_logo.png" alt="">
                     <div class="overlay">
