--- a/index.html
+++ b/index.html
@@ -321,19 +321,21 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            <div class="galeria">    
+            </div>         
+        </div>
+        <div class="contenido-seccion">
+            <h2>PORTFOLIO</h2>
+            <div class="galeria">
                 <div class="proyecto">
-                   <img src="img/Longo_logo.png" alt="">
+                   <img src="img/leo.jpg" alt="">
                     <div class="overlay">
-                        <a href="London_team.html">
-                           <h3>Team Dashboard</h3>
-                                <p>Financial Balance and Sporting Performance at London United</p>
+                        <a href="World_Cup.html">
+                           <h3>Precision on the Pitch</h3>
+                                <p>Argentina’s Qatar World Cup Final Passing Analysis</p>
                         </a>
                     </div>
                 </div>
-            </div>
-            
+            </div>         
         </div>
     </section>
 
