--- a/index.html
+++ b/index.html
@@ -317,15 +317,13 @@
                     <div class="overlay">
                         <a href="World_Cup.html">
                            <h3>Precision on the Pitch</h3>
-                                <p>Argentina’s Qatar World Cup Final Passing Analysis</p>
+                                <p>Argentina’s Qatar World Cup Final Passing Analysis 1</p>
                         </a>
                     </div>
                 </div>
             </div>         
-        </div>
-        <div class="contenido-seccion">
-            <h2>PORTFOLIO</h2>
-            <div class="galeria">
+        
+             <div class="galeria">
                 <div class="proyecto">
                    <img src="img/leo.jpg" alt="">
                     <div class="overlay">
@@ -335,7 +333,7 @@
                         </a>
                     </div>
                 </div>
-            </div>         
+            </div> 
         </div>
     </section>
 
