--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <div class="overlay">
                         <a href="World_Cup.html">
                            <h3>Precision on the Pitch</h3>
-                                <p>Argentina’s Qatar World Cup Final Passing Analysis 1</p>
+                                <p>Argentina’s Qatar World Cup Final Passing Analysis </p>
                         </a>
                     </div>
                 </div>
@@ -327,9 +327,9 @@
                 <div class="proyecto">
                    <img src="img/leo.jpg" alt="">
                     <div class="overlay">
-                        <a href="World_Cup.html">
-                           <h3>Precision on the Pitch</h3>
-                                <p>Argentina’s Qatar World Cup Final Passing Analysis</p>
+                        <a href="London_team.html">
+                           <h3>London team</h3>
+                                <p>Financial performance, user engagement, operational processes, and learning and improvement initiatives.</p>
                         </a>
                     </div>
                 </div>
