--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         
              <div class="galeria">
                 <div class="proyecto">
-                   <img src="img/leo.jpg" alt="">
+                   <img src="img/london_logo.png" alt="">
                     <div class="overlay">
                         <a href="London_team.html">
                            <h3>London team</h3>
