--- a/London_team.html
+++ b/London_team.html
@@ -55,7 +55,8 @@
                 Its primary goal is to compete at the highest level and aspire to win championships both domestically and internationally, 
                 with a strong commitment to excellence in the game and the development of talented players.<br> 
                 Moreover, this report will feature the presentation of dashboards covering the four vital dimensions of analysis pertinent to 
-                our organization: financial performance, user engagement, operational processes, and learning and improvement initiatives
+                our organization: financial performance, user engagement, operational processes, and learning and improvement initiatives. 
+                V1
 
                 
          </div>
@@ -64,7 +65,7 @@
  <!-- SECCION PORTFOLIO -->
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
-            <iframe src="https://vrn7wevjal8dln1.eu.qlikcloud.com/single/?appid=14dc684b-f768-4538-8ca0-fcd668228b5b&sheet=bb7996fb-7852-4916-ac70-e48ccb187dda&theme=horizon&opt=ctxmenu,currsel" style="border:none;width:100%;height:100%;"></iframe>            
+            <iframe src="https://vrn7wevjal8dln1.eu.qlikcloud.com/single/?appid=14dc684b-f768-4538-8ca0-fcd668228b5b&sheet=bb7996fb-7852-4916-ac70-e48ccb187dda&theme=horizon&opt=ctxmenu,currsel" style="border:none; width:100%; height:100%;"></iframe>
         </div>
     </section>
 
