--- a/London_team.html
+++ b/London_team.html
@@ -55,7 +55,7 @@
                 Its primary goal is to compete at the highest level and aspire to win championships both domestically and internationally, 
                 with a strong commitment to excellence in the game and the development of talented players.<br> 
                 Moreover, this report will feature the presentation of dashboards covering the four vital dimensions of analysis pertinent to 
-                our organization: financial performance, user engagement, operational processes, and learning and improvement initiatives. V1
+                our organization: financial performance, user engagement, operational processes, and learning and improvement initiatives.
                 
 
                 
@@ -70,7 +70,7 @@
                     <img src="img/codigo.png" alt="">
                     <div class="overlay">
                         <a href="https://vrn7wevjal8dln1.eu.qlikcloud.com/sense/app/14dc684b-f768-4538-8ca0-fcd668228b5b/sheet/bb7996fb-7852-4916-ac70-e48ccb187dda/state/analysis" target="_blank">
-                            <h3>View Dashboard </h3>
+                            <h3>View Interactive Dashboard </h3>
                          </a>
                     </div>
                 </div>
