--- a/index.html
+++ b/index.html
@@ -334,6 +334,18 @@
                     </div>
                 </div>
             </div> 
+
+            <div class="galeria">
+                <div class="proyecto">
+                   <img src="img/COVID—19.png" alt="">
+                    <div class="overlay">
+                        <a href="Covid_SQL.html">
+                           <h3>Covid Data</h3>
+                                <p> Analyze COVID-19 data </p>
+                        </a>
+                    </div>
+                </div>
+            </div>   
         </div>
     </section>
 
