--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 <div class="proyecto">
                    <img src="img/COVID—19.png" alt="">
                     <div class="overlay">
-                        <a href="Covid_SQL.html">
+                        <a href="https://github.com/Jonathan-Aponte/portfolio/blob/main/Covid_SQL.html">
                            <h3>Covid Data</h3>
                                 <p> Analyze COVID-19 data </p>
                         </a>
