--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <div class="overlay">
                         <a href="https://github.com/Jonathan-Aponte/portfolio/blob/main/CovidPortafolio/Covid.sql">
                            <h3>Covid Data</h3>
-                                <p> Analyze COVID-19 data </p>
+                                <p> Analyze COVID-19 data 2</p>
                         </a>
                     </div>
                 </div>
